[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conformal-risk"
version = "0.1.0"
description = "Distribution-free financial risk metrics with coverage guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["conformal prediction", "risk management", "VaR", "CVaR", "finance", "statistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/conformal_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
